--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -1,14 +1,11 @@
 FROM maven:3.8.4-openjdk-17 as maven
-COPY src /usr/src/app/src
-COPY pom.xml /usr/src/app
-RUN mvn -f /usr/src/app/pom.xml clean package
+COPY ./pom.xml ./pom.xml
+RUN mvn dependency:go-offline -B
+COPY ./src ./src
+RUN mvn package
 
 FROM openjdk:17-jdk-alpine
 VOLUME /tmp
+COPY --from=maven target/*.jar app.jar
 COPY run.sh .
-#ARG JAR_FILE
-#COPY ${JAR_FILE} app.jar
-#COPY target/*.jar app.jar
-COPY --from=maven /usr/src/app/target/*.jar app.jar
-#ENTRYPOINT ["java","-jar","/app.jar"]
 ENTRYPOINT ["./run.sh"]
