--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -8,4 +8,5 @@ FROM openjdk:17-jdk-alpine
 VOLUME /tmp
 COPY --from=maven target/*.jar app.jar
 COPY run.sh .
+RUN chmod +x run.sh
 ENTRYPOINT ["./run.sh"]
